fixed wrong positions in info pictures

--- a/client/src/assets/info.less
+++ b/client/src/assets/info.less
@@ -1,6 +1,14 @@
 @infowidth : 125px;
 @infoimgwidth : 150px;
 
+.display-table{
+  display: table;
+}
+
+.display-table-row{
+  display: table-row;
+}
+
 .info-container{
   width: 100%;
 }
@@ -12,14 +20,14 @@
 }
 
 .info-rows{
+  .display-table;
   width: auto;
-  display: table;
   padding: 5px;
 }
 
 .info-row{
+  .display-table;
   float:left;
-  display: table;
 }
 
 .info-title{
